--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <input type="checkbox" id="select" aria-label="checkbox">
                 <span class="slider"></span>
               </label>
-            <sapn id="month" class="plan">Monthly</sapn>
+            <span id="month" class="plan">Monthly</span>
         </div>
         <!-- ================START PRICE DIV AREA============= -->
         <div id="price">
